tests/shouldFail/j086a.c
int f(a){
	return a;
}

int main(void){
	return f(0);
}
